--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-60x60.png" sizes="60x60">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-72x72.png" sizes="72x72">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-76x76.png" sizes="76x76">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-114x114.png" sizes="114x114">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-120x120.png" sizes="120x120">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-144x144.png" sizes="144x144">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-152x152.png" sizes="152x152">
-  <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-180x180.png" sizes="180x180">
-  <meta name="msapplication-TileImage" content="/src/images/icons/app-icon-144x144.png">
+    <link rel="apple-touch-icon" href="/src/img/kasu-logo-57_x_57.png" sizes="57x57">
+  <link rel="apple-touch-icon" href="/src/img/kasu-logo-60_x_60.png" sizes="60x60">
+  <link rel="apple-touch-icon" href="/src/img/kasu-logo-72_x_72.png" sizes="72x72">
+  <link rel="apple-touch-icon" href="/src/img/kasu-logo-76_x_76.png" sizes="76x76">
+  <link rel="apple-touch-icon" href="/src/img/kasu-logo-114_x_114.png" sizes="114x114">
+  
+  <meta name="msapplication-TileImage" content="/src/img/kasu-logo-57_x_57.png">
   <meta name="msapplication-TileColor" content="#fff">
-  <meta name="theme-color" content="#e5e5e5">
+  <meta name="theme-color" content="#f5f5f5">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/kasu_logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -54,12 +51,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js" ></script>
-      <script type="text/javascript">
-         (function(){
-            emailjs.init("%REACT_APP_EMAILJS_USERID%");
-         })();
-      </script> -->
+  
     
   </body>
 </html>
